--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,14 @@ img {
 header {
   height: 80px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+}
+
+.header-left {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0px;
   padding-left: 16px;
 }
 
@@ -80,17 +86,16 @@ header .logo {
   margin-right: 30px;
 }
 
-.doc-request {
+.header-right {
   /* 絶対値指定なのにサイズが変わる */
   width: 200px;
   height: 80px;
   line-height: 80px;
   text-align: center;
   background-color: #000000;
-  margin-left: auto;
 }
 
-.doc-request a {
+.header-right a {
   display: block;
   margin: auto;
   color: #FFFFFF;
@@ -130,10 +135,12 @@ header .logo {
 }
 
 .newslist dt > span {
+  display: inline-block;
+  height: 18px;
   margin-left: 10px;
   padding: 1px 7px;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 18px;
   color: #FFFFFF;
   background-color: #000000;
 }
@@ -290,12 +297,11 @@ footer .copy {
     bottom: -24px;
   }
 
-  header {
+  .header-left {
     display: block;
-    padding: 12px 0 0 16px;
   }
 
-  .doc-request {
+  .header-right {
     display: none;
   }
 
