--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "メイリオ";
-  font-size: 0.8rem;
+  font-size: 0.875rem;
   color: #000000;
   background-color: #F0F0F0;
 }
@@ -188,7 +188,8 @@ header .logo {
 
 .business-content h3 {
   font-size: 14px;
-  margin:50px 0 10px 0;
+  margin:50px 0 10px 18px;
+  position: relative;
 }
 
 .business-content h3::before {
@@ -198,8 +199,8 @@ header .logo {
   display: inline-block;
   background-color: #000000;
   position: absolute;
-  top: calc(50%);
-  right: calc(50% + 2px);
+  top: 50%;
+  left: -18px;
 }
 
 .business-left, .business-right {
@@ -224,7 +225,7 @@ header .logo {
 }
 
 .company-left {
-  width: 60%;
+  width: 55%;
   height: 100%;
   background-color: #FFFFFF;
   padding:100px 0 100px 62px;
@@ -232,20 +233,21 @@ header .logo {
 
 .company-info {
   margin-top: 86px;
-  font-size: 14px;
 }
 
-.company-info td {
+.index {
   padding-bottom: 10px;
+  font-weight: normal;
+  text-align: left;
 }
 
-.company-info .detail {
-  padding-left: 29px;
+.detail {
+  padding:0 0 10px 29px;
 }
 
 .company-right {
-  width: 60%;
-  margin: auto 0 auto -7%;
+  width: 53%;
+  margin: auto 0 auto -6%;
 }
 
 .company-right img {
@@ -365,11 +367,12 @@ footer .copy {
   
   .business-content h3 {
     font-size: 14px;
-    margin:30px 0 10px 0;
+    margin:30px 0 10px 18px;
   }
   
   .business-left, .business-right {
     width: 100%;
+    margin: 0 aoto;
     display: block;
   }
 
@@ -399,18 +402,21 @@ footer .copy {
     font-size: 14px;
   }
   
-  .company-info td {
+  .index, .detail  {
     display: block;
-    padding: 0;
   }
 
-  .company-info .index {
+  .index {
     padding-top: 14px;
+    padding-bottom: 0;
   }
   
-  .company-info .detail {
-    padding-top: 5px;
-    padding-left: 14px;
+  .detail {
+    padding: 5px 0 0 14px;
+  }
+
+  .blank {
+    padding: 0;
   }
   
   .company-right {
